# wasm-fast-compress

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
benchmarks/: benchmark-all-compare.html  benchmark-all-compare.mjs  benchmark-all.html  benchmark-brotli-browser.html  benchmark-brotli-minimal.mjs  benchmark-gzip-browser.html  benchmark-isolated.html  benchmark-lz4-browser.html  benchmark-lz4-only.mjs  benchmark-silesia.mjs  benchmark-simd-node.mjs  benchmark-simd.html  gen_json.py
bindings/brotli-wasm/: Cargo.toml  wasm-bindgen-lite.config.json  wrapper.js
bindings/brotli-wasm/bench_out/: report.html  report.json  report.md
bindings/brotli-wasm/bench_out/simd_out/: autovec.json  scalar.json
bindings/brotli-wasm/src/: lib.rs
bindings/gzip-wasm/: Cargo.toml  wasm-bindgen-lite.config.json  wrapper.js
bindings/gzip-wasm/bench_out/: report.html  report.json  report.md
bindings/gzip-wasm/bench_out/simd_out/: autovec.json  scalar.json
bindings/gzip-wasm/src/: lib.rs
bindings/lz4-wasm/: Cargo.toml  wasm-bindgen-lite.config.json  wrapper.js
bindings/lz4-wasm/bench_out/: report.html  report.json  report.md
bindings/lz4-wasm/bench_out/simd_out/: autovec.json  scalar.json
bindings/lz4-wasm/src/: lib.rs
crates/codec-brotli/: Cargo.toml
crates/codec-brotli/src/: lib.rs
crates/codec-gzip/: Cargo.toml
crates/codec-gzip/src/: lib.rs
crates/codec-lz4/: Cargo.toml
crates/codec-lz4/src/: lib.rs
crates/core-api/: Cargo.toml
crates/core-api/src/: lib.rs
docs/: BENCHMARKING.md  BROTLI_OPTIMIZATIONS.md  GZIP_OPTIMIZATIONS.md  HN_REQUEST_COMPRESSION_KEY_POINTS.md  LZ4_OPTIMIZATIONS.md  OPTIMIZATIONS_OVERVIEW.md  PERFORMANCE_NOTES.md
examples/: README.md
examples/browser/: index.html  main.js
examples/lz4-upload/: README.md  index.html  package-lock.json  package.json  server.mjs
examples/node/: basic.mjs  inline.mjs
js/brotli/: README.md  package-lock.json  package.json
js/gzip/: README.md  package-lock.json  package.json
js/lz4/: README.md  package-lock.json  package.json
scripts/: build-all.sh
test-data/silesia/: large.json
tests/: interop.mjs  lz4-streaming.mjs  stream-helpers.mjs  test-streaming.mjs
