[package]
name = "lz4-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codec-lz4 = { path = "../../crates/codec-lz4" }
core-api = { path = "../../crates/core-api" }
lz4_flex = { git = "https://github.com/addmaple/lz4_flex.git", branch = "wasm-simd", default-features = false, features = ["frame", "std"] }
